--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,11 @@
     "src":"images/icon-512x512.png",
     "sizes":"512x512",
     "type":"image/png"
+    },
+    {
+    "src":"images/icon-180px.png",
+    "sizes":"180x180",
+    "type":"image/png"
     }
   ]
 }
